# hypothesis-tree

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: run_benchmarks.py  run_openml.py
docs/: how_it_works.md
examples/: quickstart.py
hypothesis_tree/: __init__.py  carving.py  classifier.py  matching.py  refinement.py  scoring.py  tree.py
tests/: test_classifier.py
