[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hypothesis-tree"
version = "0.1.0"
description = "An exemplar-based tree classifier: prototype clusters with adaptive tolerances, grown by error-driven carving"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "new_char" }]
keywords = ["machine-learning", "classifier", "interpretable", "prototype", "tree"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["hypothesis_tree*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
